# reachy-mini-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HARDWARE.md  SETUP.md
scripts/: bench_vllm_concurrent.py  bench_vllm_dialog.py  run_robot.sh  run_robot_spark.sh  run_robot_vllm.sh  vllm_serve.sh
src/: kokoro_server.py  llm_backend.py  prewarm_tts_cache.py  robot_brain.py  robot_memory.py  robot_tools.py  streaming_tts.py  vision_cascade.py  whisper_server.py
systemd/: kokoro.service.example  ollama-override.conf.example  robot-brain.service  robot-brain.service.example  vllm-server.service  whisper.service.example
tests/: _helpers.py  test_review_fixes.py  test_review_fixes_round2.py  test_robot_memory.py  test_rolling_summary.py  test_s1_spec_decode.py  test_s3_vision.py  test_sentence_chunker.py  test_smoke.py  test_speech_stream_extractor.py  test_tools.py  test_tts_engines.py  test_tts_queue.py  test_vision_tools.py
