[project]
name = "reachy-mini-agent"
version = "0.1.0"
description = "Real-time voice + vision AI agent for Reachy Mini robot. Local LLM (Ollama), Whisper STT, Kokoro/Edge TTS, WebRTC."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "thc1006" }]
keywords = [
    "reachy-mini", "robot", "ai-agent", "voice-agent", "llm",
    "ollama", "whisper", "kokoro", "edge-tts", "webrtc",
    "multimodal", "local-ai", "self-hosted", "qwen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Robot SDK
    "reachy-mini>=1.6.3",
    # LLM clients (optional depending on LLM_MODE)
    "anthropic>=0.94.1",
    # Speech
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    # Vision
    "mediapipe>=0.10.33",
    "opencv-python>=4.10",
    # Audio I/O
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
    # Numerics
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
kokoro = ["kokoro-onnx>=0.4.0", "fastapi>=0.115", "uvicorn>=0.32", "onnxruntime-gpu>=1.20"]
servers = ["fastapi>=0.115", "uvicorn>=0.32", "pydantic>=2.5"]
# Long-term memory: Mem0 does LLM-assisted fact extraction, Qdrant embedded
# stores vectors on disk (no server), Ollama client is used to reach local
# bge-m3 for embeddings + qwen3.6 for the extraction LLM call.
memory = ["mem0ai>=2.0", "qdrant-client>=1.17", "ollama>=0.6"]
# Hugging Face CLI is used by the bench / dev scripts that download GGUF
# weights; not required at runtime.
dev    = ["huggingface-hub[cli]>=1.3", "pytest>=8.0", "pandas>=2.0", "matplotlib>=3.10"]

[project.urls]
Homepage      = "https://github.com/thc1006/reachy-mini-agent"
Repository    = "https://github.com/thc1006/reachy-mini-agent"
Issues        = "https://github.com/thc1006/reachy-mini-agent/issues"
"Upstream Reachy Mini" = "https://github.com/pollen-robotics/reachy-mini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
# Conservative rule set: only catch actual bugs, not style.
# Style is enforced by human review per CONTRIBUTING.md.
select = ["F"]
ignore = [
    "F401",  # unused imports (edge-tts etc. have side-effect imports)
    "F541",  # f-string without placeholders
    "F841",  # unused local variable
]
